# warlocks-cauldron

./: Cargo.toml  README.md
examples/: Cargo.toml  datagen.rs  pool.rs  simple.rs  specs.rs
examples/datagen/: Cargo.toml
examples/datagen/src/: main.rs
src/: enums.rs  lib.rs  macros.rs  pool.rs  random.rs  tests.rs
src/data/: mod.rs  parsed.rs  parser.rs
src/data/int/: address.rs  code.rs  common.rs  cryptographic.rs  datetime.rs  dependencies.rs  development.rs  file.rs  finance.rs  hardware.rs  internet.rs  mod.rs  path.rs  payment.rs  person.rs  scientific.rs  text.rs  transport.rs
src/data/serializers/: address.rs  datetime.rs  dependencies.rs  finance.rs  food.rs  mod.rs  person.rs  text.rs
src/providers/: address.rs  choice.rs  code.rs  complex.rs  complexed.rs  cryptographic.rs  date.rs  dependecies.rs  development.rs  file.rs  finance.rs  food.rs  hardware.rs  internet.rs  mod.rs  numeric.rs  path.rs  payment.rs  person.rs  science.rs  text.rs  transport.rs
src/providers/spec/: da.rs  en.rs  it.rs  mod.rs  nl.rs  pl.rs  pt_br.rs  ru.rs  uk.rs
src/tests/: data.rs  enums.rs  mod.rs  serialize.rs
utils/: doc.ps1  test_features.ps1
