[package]
name    = "warlocks-cauldron"
version = "0.0.1"
edition = "2021"

repository = "https://github.com/HentaiStorm/warlocks-cauldron/"
homepage   = "https://github.com/HentaiStorm/warlocks-cauldron/"
license    = "GNU General Public License v3.0"
authors    = ["HS <github.com/HentaiStorm>"]

keywords   = ["faker", "data", "generator", "random"]
publish    = ["warlocks-cauldron"]
readme     = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
lazy_static = "1.4.0"
serde_json = "1.0.91"
rand = "0.8.5"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.serde]
version = "1.0.151"
features = ["derive"]


[features]
default = ["all_locales", "all_providers"]

all_locales = [
    "cs", "da", "de", "el", "en", "es", "et", 
    "fa", "fi", "fr", "hu", "is", "it", "ja",
    "kk", "ko", "nl", "no", "pl", "pt", 
    "ru", "sk", "sv", "tr", "uk", "zh",
]

cs    = []
da    = []
de    = []
de-at = []
de-ch = []
el    = []
en    = []
en-au = []
en-ca = []
en-gb = []
es    = []
es-mx = []
et    = []
fa    = []
fi    = []
fr    = []
hu    = []
is    = []
it    = []
ja    = []
kk    = []
ko    = []
nl    = []
nl-be = []
no    = []
pl    = []
pt    = []
pt-br = []
ru    = []
sk    = []
sv    = []
tr    = []
uk    = []
zh    = []

all_providers = [
    "address", "binaryfile", "choice", "code",
    "cryptographic", "date", "development",
    "file", "finance", "food", "hardware",
    "internet", "numeric", "path", "payment",
    "person", "science", "text", "transport",
]
address       = []
binaryfile    = []
choice        = []
code          = []
cryptographic = []
date          = []
development   = ["internet"]
file          = ["text"]
finance       = []
food          = []
hardware      = []
internet      = ["date", "file", "text"]
numeric       = []
path          = []
payment       = ["person"]
person        = []
science       = []
text          = []
transport     = []
