[package]
name    = "warlocks-cauldron"
version = "0.2.22"
edition = "2021"

description = "Fake Data Generator - fully inspired by https://mimesis.name"

repository = "https://github.com/hack-wrench/warlocks-cauldron/"
homepage   = "https://github.com/hack-wrench/warlocks-cauldron/"
authors    = ["H-W <github.com/hack-wrench>"]
keywords   = ["faker", "data", "generator", "random"]

readme  = "README.md"
license = "GNU General Public License v3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
valued-enums = "1.1.4"
counter = "0.5.7"
itertools = "0.10.5"
lazy_static = "1.4.0"
serde_json = "1.0.91"
num = "0.4.0"
rand = "0.8.5"

md-5 = "0.10.5"
sha1 = "0.10.5"
sha2 = "0.10.6"
blake2 = "0.10.6"

base64 = "0.20.0"
hex = "0.4.3"

chrono-tz = "0.8.1"
chrono = "0.4.23"

urlencoding = "2.1.2"
num-bigint = "0.1.44"
ipaddress = "0.1.2"
regex = "1.7.0"
luhn = "1.0.1"

[dependencies.reqwest]
version = "0.11.13"
features = ["blocking"]

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.serde]
version = "1.0.151"
features = ["derive"]


[features]
default = ["all_locales"]

all_locales = [
    "cs", "da", "de", "de-at", "de-ch", "el", "en", "en-au",
    "en-ca", "en-gb", "es", "es-mx", "et", "fa", "fi", "fr",
    "hu", "is", "it", "ja", "kk", "ko", "nl", "nl-be", "no",
    "pl", "pt", "pt-br", "ru", "sk", "sv", "tr", "uk", "zh",
]

cs    = []
da    = []
de    = []
de-at = []
de-ch = []
el    = []
en    = []
en-au = []
en-ca = []
en-gb = []
es    = []
es-mx = []
et    = []
fa    = []
fi    = []
fr    = []
hu    = []
is    = []
it    = []
ja    = []
kk    = []
ko    = []
nl    = []
nl-be = []
no    = []
pl    = []
pt    = []
pt-br = []
ru    = []
sk    = []
sv    = []
tr    = []
uk    = []
zh    = []
