[package]
name = "datagen"
version = "6.6.6"
edition = "2021"
workspace = "../"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.warlocks-cauldron]
path = "../../"
default-features = false
features = ["ru", "all_providers"]
